Corrected hover and spacing.

--- a/css/_app.css
+++ b/css/_app.css
@@ -885,7 +885,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #fcfcfc;
 }
 input,
 button,
@@ -931,7 +931,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.42857143;
-  background-color: #ffffff;
+  background-color: #fcfcfc;
   border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2079,7 +2079,7 @@ th {
   border-top: 2px solid #dddddd;
 }
 .table .table {
-  background-color: #ffffff;
+  background-color: #fcfcfc;
 }
 .table-condensed > thead > tr > th,
 .table-condensed > tbody > tr > th,
@@ -3621,7 +3621,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #ffffff;
+  background-color: #fcfcfc;
   border: 1px solid #dddddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -3667,7 +3667,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .nav-tabs.nav-justified > .active > a,
   .nav-tabs.nav-justified > .active > a:hover,
   .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #ffffff;
+    border-bottom-color: #fcfcfc;
   }
 }
 .nav-pills > li {
@@ -3735,7 +3735,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .nav-tabs-justified > .active > a,
   .nav-tabs-justified > .active > a:hover,
   .nav-tabs-justified > .active > a:focus {
-    border-bottom-color: #ffffff;
+    border-bottom-color: #fcfcfc;
   }
 }
 .tab-content > .tab-pane {
@@ -4566,7 +4566,7 @@ a.list-group-item.active > .badge,
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #ffffff;
+  background-color: #fcfcfc;
   border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -6238,6 +6238,7 @@ button.close {
   background-color: #f2dede;
   border-color: #ebccd1;
   color: #a94442;
+  background-image: none;
 }
 .error hr {
   border-top-color: #e4b9c0;
@@ -6245,8 +6246,17 @@ button.close {
 .error .alert-link {
   color: #843534;
 }
+.success {
+  background-image: none;
+}
 body {
-  background: #ffffff;
+  background: #fcfcfc;
+}
+#dokuwiki__content {
+  margin-top: 40px;
+}
+#dokuwiki__site {
+  max-width: 1350px;
 }
 .button {
   box-shadow: none !important;
@@ -6470,8 +6480,8 @@ dl.file > dt > a {
   color: #dd1144;
 }
 .dropdown-menu {
-  -webkit-box-shadow: 0 3px 6px #eeeeee;
-  box-shadow: 0 3px 6px #eeeeee;
+  -webkit-box-shadow: 0 0 0 #555555;
+  box-shadow: 0 0 0 #555555;
 }
 .dropdown-menu > li > a {
   padding-left: 0;
@@ -6716,7 +6726,7 @@ a:focus {
   border-top: 2px solid #dddddd;
 }
 .table > table.inline .table {
-  background-color: #ffffff;
+  background-color: #fcfcfc;
 }
 .table > table.inline > thead > tr > th,
 .table > table.inline > tbody > tr > th,
@@ -6737,12 +6747,23 @@ a:focus {
 #dokuwiki__pagetools a:hover {
   color: #555555 !important;
 }
+#dokuwiki__pagetools {
+  margin-right: -35px;
+}
+#dokuwiki__aside {
+  margin-top: 40px;
+  padding-right: 10px;
+}
 #dokuwiki__aside .level1,
 #dokuwiki__aside .level2,
 #dokuwiki__aside .level3,
 #dokuwiki__aside .level4,
 #dokuwiki__aside .level5 {
   list-style: none;
+}
+#dokuwiki__aside ul {
+  background-color: #fff;
+  padding-left: 0;
 }
 #dokuwiki__aside li {
   margin: 0;
@@ -6768,14 +6789,26 @@ a:focus {
   padding: 8px 0;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
-#dokuwiki__aside .level2:hover {
+#dokuwiki__aside .level2 > .li:hover {
   background-color: #eeeeee;
 }
+#dokuwiki__aside .level2 {
+  padding-bottom: 0;
+  padding-top: 0;
+}
 #dokuwiki__aside .level2 > .li {
+  padding-bottom: 8px;
   padding-left: 15px;
+  padding-top: 8px;
+}
+#dokuwiki__aside .level2 > ul {
+  margin-top: 4px;
 }
 #dokuwiki__aside .level3 > .li {
   padding-left: 35px;
+}
+#dokuwiki__aside .level3:hover {
+  background-color: #eeeeee;
 }
 #dokuwiki__aside a,
 #dokuwiki__aside a:link,
