--- a/less/components/alerts.less
+++ b/less/components/alerts.less
@@ -1,4 +1,10 @@
 .error {
 
     .alert-danger;
+    background-image: none;
+}
+
+.success {
+
+	background-image: none;
 }
