--- a/less/components/body.less
+++ b/less/components/body.less
@@ -2,3 +2,13 @@ body {
 
     background: @body-bg;
 }
+
+#dokuwiki__content {
+
+	margin-top: @content-margin-top;
+}
+
+#dokuwiki__site {
+
+	max-width: 	1350px;
+}
