--- a/less/components/pagetools.less
+++ b/less/components/pagetools.less
@@ -5,3 +5,7 @@
         color: @gray !important;
     }
 }
+
+#dokuwiki__pagetools {
+        margin-right: -35px;
+    }
