--- a/less/core/variables.less
+++ b/less/core/variables.less
@@ -90,7 +90,7 @@
 /*
  * Boostrap variables
  */
-@body-bg:               #fff;                                 // background color for `<body>`
+@body-bg:               #FCFCFC;                     // background color for `<body>`
 //@text-color:            @gray-dark;                // global text color on `<body>`
 //@link-color:            @brand-primary;            // global textual link color
 @link-hover-color:      darken(@link-color, 5%);  // link hover color set via `darken()` function
@@ -98,7 +98,7 @@
 /*
  * Custom variables
  */
-
+@content-margin-top: 	40px;
 
 
 
@@ -162,7 +162,7 @@
 /*
  * Custom variables
  */
-@dropdown-shadow:                 0 3px 6px @gray-lighter;
+@dropdown-shadow:                 0 0 0 @gray;
 
 
 
@@ -196,7 +196,7 @@
 //@navbar-collapse-max-height:       340px;
 
 //@navbar-default-color:             #777;
-@navbar-default-bg:                @body-bg;
+@navbar-default-bg:                #fff;
 //@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
